# svapy

./: .flake8  .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
example/: counter.v  csr.v  multiplier_pipe.v
ref_model/: ref_counter.py  ref_multiplier.py
svapy/: core.py  parser.py
svapy/templates/: module_docstring.j2  module_interface.j2  test_runner.j2
tests/: README.md  test_core.py  test_integration.py  test_parser.py
