[project]
name = "svapy"
version = "0.1.0"
description = ""
authors = [{ name = "Ckaf", email = "borisnovoselov602@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyverilog (>=1.3.0,<2.0.0)",
    "hypothesis (>=6.134.0,<7.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "vcdvcd (>=2.3.6,<3.0.0)",
    "jinja2 (>=3.1.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
