[tool.poetry]
name = "svapy"
version = "0.1.0"
description = "Property-Based Testing Framework for Hardware Designs"
authors = ["Ckaf <borisnovoselov602@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "svapy"}]

[tool.poetry.dependencies]
python = "^3.13"
pyverilog = "^1.3.0"
hypothesis = "^6.134.0"
pytest = "^8.4.0"
vcdvcd = "^2.3.6"
jinja2 = "^3.1.0"

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.0"
pytest-xdist = "^3.3.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
svapy = "svapy.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
